--- a/my website.html
+++ b/my website.html
@@ -10,7 +10,7 @@
     <p></p>
     <p> </p>
     <a href="</a>
-    <p>pink!</p>
+    <h1>pink!</h1>
     <img src="" alt=" " width="450" height="640">
     <a href="www.google.com">This is a link to Google</a>
     <p>Beach!</p>
