--- a/my website.html
+++ b/my website.html
@@ -13,6 +13,6 @@
     <h1>pink!</h1>
     <img src="" alt=" " width="450" height="640">
     <a href="www.google.com">This is a link to Google</a>
-    <h1>Beach!</h1>
+    <h1>i love beaches and i love summer!</h1>
     <img src="beach.jpg" alt="Picture of a beach" width="400" height="400">
 </body>
